--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,17 @@ set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
+
+setw -g mode-keys vi
+set -s set-clipboard on
+set -s copy-command 'xsel -b'
+
+set -g history-limit 10000
+
 # hotkeys
+bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -21,7 +31,8 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=blue'
 set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right '%Y-%m-%d %H:%M:%S '
+set -g status-interval 1
 
 setw -g window-status-current-style 'fg=blue bg=lightblue bold'
 setw -g window-status-current-format ' #I #W #F '
