--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,14 +26,26 @@ bind -n M-Down select-pane -D
 
 # basic design
 
-# statusbar
-set -g status-position bottom
-set -g status-justify left
-set -g status-style 'bg=blue'
+# plugins
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'tmux-plugins/tpm'
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor 'macchiato'
+set -g @catppuccin_window_status_style 'rounded'
+
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+
+# catpuccin settings
+set -g @catppuccin_window_current_number_color "#{@thm_green}"
+set -g @catppuccin_date_time_text " %d.%m.%Y %H:%M:%S"
+set -g @catppuccin_window_current_text " #{pane_current_command}: #{pane_current_path}"
+set -g @catppuccin_window_text " #{pane_current_command}"
+
+# status bar
 set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M:%S '
+set -g status-right '#{E:@catppuccin_status_date_time}'
 set -g status-interval 1
+set -g status-position bottom
 
-setw -g window-status-current-style 'fg=blue bg=lightblue bold'
-setw -g window-status-current-format ' #I #W #F '
-
+run '~/.tmux/plugins/tpm/tpm'
