--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "xterm-256color"
+set -as terminal-overrides ",*:Tc"
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
@@ -13,7 +14,7 @@ setw -g mode-keys vi
 set -s set-clipboard on
 set -s copy-command 'xsel -b'
 
-set -g history-limit 10000
+set -g history-limit 100000
 
 # hotkeys
 bind r source-file ~/.tmux.conf
@@ -24,23 +25,70 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Gruvbox Palette
+# Background variants
+set -g @bg0_h "#1d2021"
+set -g @bg0   "#282828"
+set -g @bg1   "#3c3836"
+set -g @bg2   "#504945"
+set -g @bg3   "#665c54"
+set -g @bg4   "#7c6f64"
+set -g @bg0_s "#32302f"
+
+# Foreground variants
+set -g @fg0 "#fbf1c7"
+set -g @fg1 "#ebdbb2"
+set -g @fg2 "#d5c4a1"
+set -g @fg3 "#bdae93"
+set -g @fg4 "#a89984"
+
+# Basic colors
+set -g @red_dark    "#cc241d"
+set -g @red_bright  "#fb4934"
+set -g @green_dark  "#98971a"
+set -g @green_bright "#b8bb26"
+set -g @yellow_dark "#d79921"
+set -g @yellow_bright "#fabd2f"
+set -g @blue_dark   "#458588"
+set -g @blue_bright "#83a598"
+set -g @purple_dark "#b16286"
+set -g @purple_bright "#d3869b"
+set -g @aqua_dark   "#689d6a"
+set -g @aqua_bright "#8ec07c"
+
+# Grays
+set -g @gray_dark "#928374"
+set -g @gray_light "#a89984"
+
+# Oranges
+set -g @orange_dark "#d65d0e"
+set -g @orange_bright "#fe8019"
+
 # basic design
 
 # plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'AngryMorrocoy/tmux-neolazygit' # prefix + G
 set -g @plugin 'tmux-plugins/tpm'
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor 'macchiato'
-set -g @catppuccin_window_status_style 'rounded'
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style 'custom'
 
 run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 # catpuccin settings
-set -g @catppuccin_window_current_number_color "#{@thm_green}"
-set -g @catppuccin_date_time_text " %d.%m.%Y %H:%M:%S"
+set -g @catppuccin_status_background "#{@bg0_h}" # use bg0 for when noice is configured
+
+# active window
+set -g @catppuccin_window_current_number_color "#{@green_dark}"
+set -g @catppuccin_window_current_text_color "#{@bg2}"
 set -g @catppuccin_window_current_text " #{pane_current_command}: #{pane_current_path}"
+
+# inactive window
+set -g @catppuccin_window_text_color "#{@bg1}"
 set -g @catppuccin_window_text " #{pane_current_command}"
+set -g @catppuccin_date_time_text " %d.%m.%Y %H:%M:%S"
 
 # status bar
 set -g status-left ''
