--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,7 +73,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor 'mocha'
-set -g @catppuccin_window_status_style 'custom'
+set -g @catppuccin_window_status_style 'slanted'
 
 run ~/.tmux/plugins/tmux/catppuccin.tmux
 
@@ -88,7 +88,9 @@ set -g @catppuccin_window_current_text " #{pane_current_command}: #{pane_current
 # inactive window
 set -g @catppuccin_window_text_color "#{@bg1}"
 set -g @catppuccin_window_text " #{pane_current_command}"
-set -g @catppuccin_date_time_text " %d.%m.%Y %H:%M:%S"
+
+# status
+set -g @catppuccin_date_time_text "#[bg=#{@bg2}] %d.%m.%Y %H:%M:%S"
 
 # status bar
 set -g status-left ''
